@@ -1,0 +1,41 @@
+<?php
+/***************************************************************
+*  Copyright notice
+*
+*  (c) 2012 Ingo Renner <ingo@typo3.org>
+*  All rights reserved
+*
+*  This script is part of the TYPO3 project. The TYPO3 project is
+*  free software; you can redistribute it and/or modify
+*  it under the terms of the GNU General Public License as published by
+*  the Free Software Foundation; either version 2 of the License, or
+*  (at your option) any later version.
+*
+*  The GNU General Public License can be found at
+*  http://www.gnu.org/copyleft/gpl.html.
+*
+*  This script is distributed in the hope that it will be useful,
+*  but WITHOUT ANY WARRANTY; without even the implied warranty of
+*  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+*  GNU General Public License for more details.
+*
+*  This copyright notice MUST APPEAR in all copies of the script!
+***************************************************************/
+
+/**
+ * Query filter builder interface
+ *
+ * @author Ingo Renner <ingo@typo3.org>
+ */
+interface tx_solr_QueryFacetBuilder {
+
+	/**
+	 * Builds the facet parameters depending on a facet's configuration
+	 *
+	 * @param string $facetName Facet name
+	 * @param array $facetConfiguration The facet's configuration
+	 */
+	public function buildFacetParameters($facetName, array $facetConfiguration);
+}
+
+?>
